Fix layout bugs
fixed footer bug
update button layout

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -6,11 +6,16 @@ h1 {
   justify-content: center;
 }
 
+.buttons {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+
 .sign-in-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 70vh;
 
   fieldset {
     border: 1px groove;
